--- a/KaposRestaurant/View/ConsultarPedido.xaml
+++ b/KaposRestaurant/View/ConsultarPedido.xaml
@@ -6,12 +6,20 @@
              xmlns:local="clr-namespace:KaposRestaurant.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <DataTemplate x:Key="Detalles">
+            <TextBlock>
+                <Run Text="Nº Elementos"/>
+                <Run Text="{Binding Path=ELEMENTOS.Count}"/>
+            </TextBlock>
+        </DataTemplate>
+    </UserControl.Resources>
     <StackPanel>
         <DataGrid x:Name="ConsultarPedidosDataGrid" ItemsSource="{Binding}" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Fecha Pedido" Binding="{Binding Pedido}"/>
-                <DataGridCheckBoxColumn Header="Enviado" Binding="{Binding Enviado}"/>
-                <DataGridTextColumn Header="Precio" Binding="{Binding Precio}"/>
+                <DataGridTextColumn Header="Fecha Pedido" Binding="{Binding FechaComanda}" Width="*"/>
+                <DataGridCheckBoxColumn Header="Enviado" Binding="{Binding Servida}" Width="*"/>
+                <DataGridTextColumn Header="Precio" Binding="{Binding Precio}" Width="*"/>
             </DataGrid.Columns>
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
@@ -26,6 +34,7 @@
                             <Run Text="Precion Sin IVA" FontWeight="Bold"/>
                             <Run Text="{Binding PrecioSinIva}"/>
                         </TextBlock>
+                        
                     </StackPanel>
                 </DataTemplate>
             </DataGrid.RowDetailsTemplate>
