--- a/KaposRestaurant/View/CRUDVIew.xaml
+++ b/KaposRestaurant/View/CRUDVIew.xaml
@@ -81,33 +81,34 @@
                     </Grid.RowDefinitions>
 
                     <Label Grid.Column="0" Grid.Row="0" Content="Seleccione Categoría"/>
-                    <ComboBox Grid.Column="1" Grid.Row="0" x:Name="CategoriasCRUDComboBox" Width="300" Margin="10"></ComboBox>
+                    <ComboBox Grid.Column="1" Grid.Row="0" x:Name="CategoriasCRUDComboBox" Width="300" Margin="10"
+                              ItemsSource="{Binding ListaCategorias}" DisplayMemberPath="NombreCategoria"></ComboBox>
 
                     <Label Grid.Column="0" Grid.Row="1" Content="Seleccione Elemento" Visibility="Collapsed"/>
-                    <ComboBox Grid.Column="1" Grid.Row="1" x:Name="ElementoCRUDComboBox" Width="300" Margin="10" Visibility="Collapsed"></ComboBox>
+                    <ComboBox Grid.Column="1" Grid.Row="1" x:Name="ElementoCRUDComboBox" Width="300" Margin="10" Visibility="Collapsed"
+                              ItemsSource="{Binding ListaElementos}" DisplayMemberPath="NombreElementos"></ComboBox>
 
                     <Label Grid.Column="0"  Grid.Row="2" Content="Nombre del Elemento:"/>
-                    <TextBox Grid.Column="1" Grid.Row="2" x:Name="NombreElementoTextBox" Width="300"/>
+                    <TextBox Grid.Column="1" Grid.Row="2" x:Name="NombreElementoTextBox" Width="300" Text="{Binding ElementoSeleccionado.NombreElemento}"/>
 
                     <Label Grid.Column="0" Grid.Row="3" Content="Descripción del Elemento:"/>
-                    <TextBox Grid.Column="1" Grid.Row="3" x:Name="DescripcionElementoTextBox" Width="300"/>
+                    <TextBox Grid.Column="1" Grid.Row="3" x:Name="DescripcionElementoTextBox" Width="300" Text="{Binding ElementoSeleccionado.Descripcion}"/>
 
                     <Label Grid.Column="0" Grid.Row="4" Content="Precio del Elemento:"/>
-                    <TextBox Grid.Column="1" Grid.Row="4" x:Name="PrecioElementoTextBox" Width="300"/>
+                    <TextBox Grid.Column="1" Grid.Row="4" x:Name="PrecioElementoTextBox" Width="300" TextAlignment="Left" Text="{Binding ElementoSeleccionado.Precio}"/>
 
                     <Label Grid.Column="0" Grid.Row="5" Content="Seleccionar imagen:"/>
 
-                    <TextBox Grid.Column="1" Grid.Row="5" x:Name="ImagenElementoTextBox" Width="300"/>
-                    <Button Grid.Column="2" Grid.Row="5" x:Name="SeleccionImagenElementoButton" Content="..." Width="30" Margin="5" Height="18"/>
+                    <TextBox Grid.Column="1" Grid.Row="5" x:Name="ImagenElementoTextBox" Width="300" Text="{Binding ElementoSeleccionado.ImagenElementoURL}"/>
+                    <Button Grid.Column="2" Grid.Row="5" x:Name="SeleccionImagenElementoButton" Content="..." Width="30" Margin="5" Height="18" Click="SeleccionImagenElementoButton_Click" />
 
-                    <Image x:Name="ImagenElementoImage" Grid.Column="2" Grid.RowSpan="4" Source="{Binding}"></Image>
+                    <Image x:Name="ImagenElementoImage" Grid.Column="2" Grid.RowSpan="4" Source="{Binding ElementoSeleccionado.ImagenElementoURL}"></Image>
 
                 </Grid>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Button x:Name="AceptarCambiosButton" Content="Aceptar" Margin="5" Width="100"/>
-                    <Button x:Name="CancelarCambiosButton" Content="Cancelar" Margin="5" Width="100"/>
-                    <Button x:Name="LimpiarCamposButton" Content="Limpiar Campos" Margin="5" Width="100"/>
+                    <Button x:Name="AceptarCambiosButton" Content="Aceptar" Margin="5" Width="100" Click="AceptarCambiosButton_Click"/>
+                    <Button x:Name="LimpiarCamposButton" Content="Limpiar Campos" Margin="5" Width="100" Click="LimpiarCamposButton_Click"/>
                 </StackPanel>
 
             </StackPanel>
