--- a/KaposRestaurant/View/CategoriasUserControl.xaml
+++ b/KaposRestaurant/View/CategoriasUserControl.xaml
@@ -10,9 +10,9 @@
 
     <UserControl.Resources>
         <DataTemplate x:Key="CategoriasDataTemplate">
-            <StackPanel>
-                <TextBlock Text="{Binding NombreCategoria}"></TextBlock>
-            </StackPanel>
+            <DockPanel>
+                <TextBlock Text="{Binding NombreCategoria}" TextAlignment="Center"></TextBlock>
+            </DockPanel>
         </DataTemplate>
     </UserControl.Resources>
     
@@ -35,27 +35,28 @@
 
     <DockPanel>
         <StackPanel DockPanel.Dock="Left" Margin="30,20,20,20">
-            <ListBox x:Name="CategoriasListBox" ItemsSource="{Binding listaCategorias}" SelectedItem="{Binding categoriaSeleccionada}" ItemTemplate="{StaticResource CategoriasDataTemplate}">
+            <ListBox x:Name="CategoriasListBox" ItemsSource="{Binding listaCategorias}" SelectedItem="{Binding categoriaSeleccionada}" ItemTemplate="{StaticResource CategoriasDataTemplate}" Height="300">
                 
             </ListBox>
             <Button Padding="5" Margin="0,10,0,0" Command="comandos:ComandosPersonalizados.Delete">Eliminar categoría</Button>
         </StackPanel>
         <GroupBox Header="Añadir nueva categoría" Margin="20">
-            <StackPanel Orientation="Vertical">
-                <DockPanel Margin="50">
+            <DockPanel>
+                <DockPanel DockPanel.Dock="Top" Margin="50">
                     <TextBlock Margin="0,0,10,0">Nombre categoría</TextBlock>
                     <TextBox Text="{Binding nuevaCategoria.NombreCategoria, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                 </DockPanel>
-                <DockPanel Margin="50,0,50,0">
+                <DockPanel DockPanel.Dock="Top" Margin="50,0,50,0">
                     <TextBlock Margin="0,0,15,0">Imagen categoría</TextBlock>
                     <Button x:Name="SeleccionarImagenButton" DockPanel.Dock="Right" Margin="10,0,0,0" Padding="10,0,10,0" Click="SeleccionarImagenButton_Click">...</Button>
                     <TextBox Text="{Binding nuevaCategoria.ImagenCategoriaURL, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                 </DockPanel>
-                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="0,150,50,0">
+                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal" Margin="0,70,50,90">
                     <Button Padding="20,0,20,0" Margin="0,0,10,0" Command="ApplicationCommands.Save">Aceptar</Button>
                     <Button Padding="20,0,20,0" Margin="10,0,0,0" Command="comandos:ComandosPersonalizados.Clear">Vaciar</Button>
                 </StackPanel>
-            </StackPanel>
+                <Image DockPanel.Dock="Left" Margin="100,0,50,0" Source="{Binding categoriaSeleccionada.ImagenCategoriaURL}" Height="200" Width="200"></Image>
+            </DockPanel>
         </GroupBox>
     </DockPanel>
 
