--- a/KaposRestaurant/View/CRUDVIew.xaml
+++ b/KaposRestaurant/View/CRUDVIew.xaml
@@ -81,20 +81,20 @@
                               ItemsSource="{Binding ListaElementos}" DisplayMemberPath="NombreElemento" SelectedItem="{Binding ElementoSeleccionado}"></ComboBox>
 
                     <Label Grid.Column="0"  Grid.Row="2" Content="Nombre del Elemento:"/>
-                    <TextBox Grid.Column="1" Grid.Row="2" x:Name="NombreElementoTextBox" Width="300" Text="{Binding ElementName=ElementoCRUDComboBox, Path=SelectedItem.NombreElemento}"/>
+                    <TextBox Grid.Column="1" Grid.Row="2" x:Name="NombreElementoTextBox" Width="300" Text="{Binding ElementoSeleccionado.NombreElemento}"/>
 
                     <Label Grid.Column="0" Grid.Row="3" Content="Descripción del Elemento:"/>
-                    <TextBox Grid.Column="1" Grid.Row="3" x:Name="DescripcionElementoTextBox" Width="300" Text="{Binding ElementName=ElementoCRUDComboBox, Path=SelectedItem.Descripcion}" TextWrapping="Wrap"/>
+                    <TextBox Grid.Column="1" Grid.Row="3" x:Name="DescripcionElementoTextBox" Width="300" Text="{Binding ElementoSeleccionado.Descripcion}" TextWrapping="Wrap"/>
 
                     <Label Grid.Column="0" Grid.Row="4" Content="Precio del Elemento:"/>
-                    <TextBox Grid.Column="1" Grid.Row="4" x:Name="PrecioElementoTextBox" Width="300" TextAlignment="Left" Text="{Binding ElementName=ElementoCRUDComboBox, Path=SelectedItem.Precio}"/>
+                    <TextBox Grid.Column="1" Grid.Row="4" x:Name="PrecioElementoTextBox" Width="300" TextAlignment="Left" Text="{Binding ElementoSeleccionado.Precio}"/>
 
                     <Label Grid.Column="0" Grid.Row="5" Content="Seleccionar imagen:"/>
 
-                    <TextBox Grid.Column="1" Grid.Row="5" x:Name="ImagenElementoTextBox" Width="300" Text="{Binding ElementName=ElementoCRUDComboBox, Path=SelectedItem.ImagenElementoURL}"/>
+                    <TextBox Grid.Column="1" Grid.Row="5" x:Name="ImagenElementoTextBox" Width="300" Text="{Binding ElementoSeleccionado.ImagenElementoURL }"/>
                     <Button Grid.Column="2" Grid.Row="5" x:Name="SeleccionImagenElementoButton" HorizontalAlignment="Left" Content="..." Width="30" Margin="5" Height="18" Click="SeleccionImagenElementoButton_Click" />
 
-                    <Image x:Name="ImagenElementoImage" Grid.Column="2" Grid.RowSpan="4" Source="{Binding ElementName=ElementoCRUDComboBox, Path=SelectedItem.ImagenElementoURL}"></Image>
+                    <Image x:Name="ImagenElementoImage" Grid.Column="2" Grid.RowSpan="4" Source="{Binding ElementoSeleccionado.ImagenElementoURL}"></Image>
 
                 </Grid>
 
