Agrego plural en el boton actualizar

--- a/KaposRestaurant/View/ConsultarPedido.xaml
+++ b/KaposRestaurant/View/ConsultarPedido.xaml
@@ -41,7 +41,7 @@
                     </DataTemplate>
                 </DataGrid.RowDetailsTemplate>
             </DataGrid>
-            <Button x:Name="Actualizar" Click="Actualizar_Click" Width="150" HorizontalAlignment="Center" Margin="20">Actualizar Pedido</Button>
+            <Button x:Name="Actualizar" Click="Actualizar_Click" Width="150" HorizontalAlignment="Center" Margin="20">Actualizar Pedidos</Button>
         </StackPanel>
     </ScrollViewer>
     
